# french_trees

./: README.MD  main.py  pyproject.toml
dataset/: PLACETTE.csv  metadonnees.csv  recapitulatif_donnees.csv  summary_data.csv
